--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,7 +1,7 @@
-<h1><%= @meet_up.title%></h1>
+<h1><%= meet_up.title%></h1>
 <h3>Description</h3>
-<p><%= @meet_up.description%></p>
+<p><%= meet_up.description%></p>
 <h3>Location</h3>
-<p><%= @meet_up.location%></p>
+<p><%= meet_up.location%></p>
 
 <a href="/">Go back</a>
