--- a/app/views/update.erb
+++ b/app/views/update.erb
@@ -1,14 +1,12 @@
-<h3>Update Meet Up</h3>
-<form action="/<%=@meet_up.id%>" method="post">
+<h3>Update <%=meet_up.title%></h3>
+<form action="/<%=meet_up.id%>" method="post">
   <input type="hidden" name="_method" value="PATCH">
   <label for="title"> Title </label>
   <input type="text" class='button'name="title">
 
-  <input type="hidden" name="_method" value="PATCH">
   <label for="description">Description </label>
   <input type="text" class='button' name="description">
 
-  <input type="hidden" name="_method" value="PATCH">
   <label for="location"> Location </label>
   <input type="text" class='button' name="location">
 
