--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -4,4 +4,20 @@
 <h3>Location</h3>
 <p><%= meet_up.location%></p>
 
+<form action="/<%= meet_up.id %>/join" method="post">
+ <button type="submit">
+   <% if !meet_up.users.include?(current_user) %>
+     <%= 'Join' %>
+   <% else %>
+     <%= 'Leave' %>
+   <% end %>
+ </button>
+</form>
+
+<h4> People going to the meet up</h4>
+<ul>
+<% meet_up.users.each do |user|%>
+<li><img src="<%= user.avatar_url%>"><%= user.username%></li>
+<%end%>
+</ul>
 <a href="/">Go back</a>
